--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.5",
-    "@angular/cdk": "^15.1.5",
-    "@angular/common": "^15.1.5",
-    "@angular/compiler": "^15.1.5",
-    "@angular/core": "^15.1.5",
-    "@angular/flex-layout": "^15.0.0-beta.42",
-    "@angular/forms": "^15.1.5",
-    "@angular/material": "^15.1.5",
-    "@angular/material-moment-adapter": "^15.1.5",
-    "@angular/platform-browser": "^15.1.5",
-    "@angular/platform-browser-dynamic": "^15.1.5",
-    "@angular/router": "^15.1.5",
+    "@angular/animations": "15.1.5",
+    "@angular/cdk": "15.1.5",
+    "@angular/common": "15.1.5",
+    "@angular/compiler": "15.1.5",
+    "@angular/core": "15.1.5",
+    "@angular/forms": "15.1.5",
+    "@angular/material": "15.1.5",
+    "@angular/material-moment-adapter": "15.1.5",
+    "@angular/platform-browser": "15.1.5",
+    "@angular/platform-browser-dynamic": "15.1.5",
+    "@angular/router": "15.1.5",
     "@auth0/angular-jwt": "^5.0.2",
     "@popperjs/core": "^2.11.6",
     "angular-calendar": "^0.30.1",
@@ -37,10 +36,10 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.6",
-    "@angular/cli": "^15.1.6",
-    "@angular/compiler-cli": "^15.1.5",
-    "@angular/localize": "^15.1.5",
+    "@angular-devkit/build-angular": "15.1.6",
+    "@angular/cli": "15.1.6",
+    "@angular/compiler-cli": "15.1.5",
+    "@angular/localize": "15.1.5",
     "@types/jasmine": "^3.10.4",
     "@types/jasminewd2": "~2.0.10",
     "@types/jest": "^27.4.1",
